# gp-lyrics-chords

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: dependencies.cmake
src/: ChordPro.cpp  ChordPro.h  Constants.h  ExtensionWindow.cpp  ExtensionWindow.h  IconPaths.h  LibMain.cpp  LibMain.h  LookAndFeel.h  Panels.h  Timer.h  Version.h
